.config/waybar/style.css
@import "themes/catppuccin/mocha.css";

* {
	font-family: FantasqueSansMono Nerd Font;
	font-size: 14px;
	min-height: 0;
}

#waybar {
	background: transparent;
	color: @text;
	margin: 5px 5px;
}

/*#workspaces {*/
/*  border-radius: 1rem;*/
/*  margin: 5px;*/
/*  background-color: @surface0;*/
/*  margin-left: 1rem;*/
/*}*/
/**/
/*#workspaces button {*/
/*  color: @lavender;*/
/*  border-radius: 1rem;*/
/*  padding: 0.4rem;*/
/*}*/
/**/
/*#workspaces button.active {*/
/*  color: @sky;*/
/*  border-radius: 1rem;*/
/*}*/
/**/
/*#workspaces button:hover {*/
/*  color: @sapphire;*/
/*  border-radius: 1rem;*/
/*}*/


#workspaces {
	background: @crust;
	margin: 5px 1px 6px 1px;
	padding: 0.1rem 1rem;
	border-radius: 10px;
	border: 0px;
	font-weight: bold;
	font-style: normal;
	/*font-size: 16px;*/
	color: @base;
	margin-left: 1rem;
}

#workspaces button {
	all: unset;
	padding: 0.5rem 0.5rem;
	color: @surface1;
	transition: all .2s ease;
}

#workspaces button.active {
	color: @text;
	border: none;
	text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
	transition: all .2s ease;
}

#workspaces button:hover {
	color: @surface2;
	border-radius: 15px;
}

#workspaces button.empty {
	color: @surface0;
	border: none;
	text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .2);
}

#workspaces button.empty:hover {
	color: @surface0;
	border: none;
	text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
	transition: all 1s ease;
}

#workspaces button.empty.active {
	color: @text;
	border: none;
	text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
}


#custom-music,
#tray,
#backlight,
#custom-ddcutil,
#bluetooth,
#clock,
#pulseaudio,
#custom-notification,
#custom-lock,
#custom-power,
#network {
	background-color: @crust;
	padding: 0.1rem 1rem;
	margin: 5px 0;
}


#pulseaudio {
	color: @maroon;
	border-radius: 10px 0px 0px 10px;
	margin-left: 1rem;
}

#clock {
	color: @blue;
}

#bluetooth {
	color: @sky;
}

#custom-notification {
	color: @lavender;
	border-radius: 0rem 10px 10px 0rem;
	margin-right: 1rem;
}

#network {
	color: @teal;
}

#battery {
	color: @green;
}

#battery.charging {
	color: @green;
}

#battery.warning:not(.charging) {
	color: @red;
}

#backlight,
#custom-ddcutil {
	color: @yellow;
}

#backlight,
#battery,
#custom-ddcutil {
	border-radius: 0;
}

#custom-music {
	color: @mauve;
	border-radius: 1rem;
}

#custom-lock {
	border-radius: 10px 0px 0px 10px;
	color: @lavender;
}

#custom-power {
	margin-right: 1rem;
	border-radius: 0px 10px 10px 0px;
	color: @red;
}

#tray {
	margin-right: 10px;
	border-radius: 10px;
}

#tray menu {
	background: @base;
	color: @text;
}

